[package]
name = "pckp"
version = "0.1.0"
authors = ["krista-chan <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.5.4"
git2 = "0.13.20"

[dependencies.reqwest]
version = "0.11.4"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]